# pigweed

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.gn  CMakeLists.txt  EXTENDED_OWNERS  GEMINI.md  MODULE.bazel  OWNERS  PIGWEED_MODULES  WORKSPACE  WORKSPACE_OWNERS  pigweed.json  workflows.json
pw_allocator_zephyr/: BUILD.bazel
pw_bluetooth/py/: BUILD.bazel  BUILD.gn  setup.cfg
pw_bluetooth_proxy/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  acl_data_channel.cc  backend.cmake  basic_mode_channel_proxy_test.cc  basic_mode_tx_engine.cc  bt-proxy.bzl  credit_based_flow_control_channel_proxy_test.cc  credit_based_flow_control_rx_engine.cc  credit_based_flow_control_rx_engine_test.cc  credit_based_flow_control_tx_engine.cc  docs.rst  dynamic_credit_sharing_test.cc  gatt_notify_test.cc  gatt_notify_tx_engine.cc  generic_l2cap_channel_async.cc  generic_l2cap_channel_sync.cc  l2cap_channel.cc  l2cap_channel_async.cc  l2cap_channel_manager.cc  l2cap_channel_manager_async.cc  l2cap_channel_manager_sync.cc  l2cap_coc_test.cc  l2cap_logical_link.cc  l2cap_signaling_channel.cc  multibuf_v1.cc  multibuf_v2.cc  proxy_host.cc  proxy_host_async.cc  proxy_host_test.cc  recombiner.cc  recombiner_test.cc  test_utils.cc  utils_test.cc
pw_bluetooth_proxy/comms2/: BUILD.bazel  BUILD.gn  h4_packet.cc  h4_packet_test.cc  proxy_test.cc
pw_bluetooth_proxy/gatt/: gatt.cc  gatt_integration_test.cc  gatt_test.cc
pw_bluetooth_proxy/hci/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  command_multiplexer.cc  command_multiplexer_test.cc  sniff_offload_manager.cc  sniff_offload_manager_test.cc
pw_bluetooth_proxy/pw_bluetooth_proxy_private/: test_utils.h
pw_bluetooth_proxy/rfcomm/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  rfcomm.bzl  rfcomm_channel.cc  rfcomm_channel_internal.cc  rfcomm_channel_internal_test.cc  rfcomm_manager.cc  rfcomm_manager_test.cc
pw_bluetooth_proxy/size_report/: BUILD.bazel  use_passthrough_proxy.cc
pw_bluetooth_sapphire/py/: BUILD.bazel  BUILD.gn  setup.cfg
pw_boot/rust/: BUILD.bazel  lib.rs  pw_boot_macros.rs
pw_build/: BUILD.bazel  BUILD.gn  CMakeLists.txt  binary_tools.bzl  cred_helper.sh  docs.rst  generated_pigweed_modules_lists.gni  ignore_group.gni  pigweed.cmake  pigweed_is_root.bzl  project_builder.rst  pw_copy_and_patch_file_test.bzl  pw_linker_script.bzl  pw_pylint.bzl  pw_pylint_test.bzl  pw_pylint_test_example.py  pw_rust_binary.bzl  pw_rust_docs.bzl  pw_starlark_unittest.bzl  python.bzl  rust_executable.gni  rust_library.gni  rust_staticlib.gni  target_types.gni
pw_build/bazel_internal/: BUILD.bazel  bazel_supports.bzl
pw_build/proto/: build_driver.proto  pigweed_build_driver.proto
pw_build/py/: BUILD.bazel  BUILD.gn  bazel_driver_test.py  error_test.py  project_builder_test.py  workflows_launcher_test.py
pw_chrono_zephyr/: BUILD.bazel  CMakeLists.txt  system_timer.cc  system_timer_test.cc
pw_clock_tree_mcuxpresso/: BUILD.bazel  clock_tree_test.cc  examples.cc
pw_clock_tree_mcuxpresso/test_mocks/: fsl_power.h
pw_digital_io_zephyr/: BUILD.bazel
pw_enum/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  docs.rst  enum_test.cc  pw_cc_enum.bzl  pw_cc_enum.cmake  pw_cc_enum.gni  pw_cc_enum_library.bzl  pw_cc_enum_library.cmake  pw_cc_enum_source_set.gni  to_string_test.cc
pw_enum/examples/: BUILD.bazel  basic_enum.cc  basic_enum_test.cc
pw_enum/py/: BUILD.bazel  BUILD.gn  generate_test.py  parse_test.py
pw_ide/: BUILD.bazel  GEMINI.md  docs.rst
pw_ide/contributing/: development.rst  index.rst  testing.rst
pw_ide/py/: BUILD.bazel  BUILD.gn  ide_query_test.py  integration_test.py  integration_test_config.json  lock_test.py  merger_test.py  performance_test.py  rust_test.py  verify_db_test.py
pw_interrupt/: BUILD.bazel  BUILD.gn  backends.rst  fake_backend.rst  fake_context.cc
pw_interrupt/examples/: BUILD.bazel  context_usage.cc  context_usage.h  context_usage_test.cc
pw_memory/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  busy_wait_forever_test.cc  busy_wait_forever_test_c.c  docs.rst  globals_test.cc  no_destructor_test.cc  sibling_cast_test.cc
pw_multibuf/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  concepts.rst  design.rst  guide.rst
pw_multibuf/examples/: BUILD.bazel  async_queue.cc  basic.cc  iterate.cc  pseudo_encrypt.cc  queue.cc  scatter_gather.cc  top_down_forward.cc  transfer.cc
pw_multibuf/size_report/: BUILD.bazel  sender.cc  transfer_v0.cc  transfer_v1.cc  transfer_v2.cc
pw_multibuf/v1/: BUILD.bazel  BUILD.gn  CMakeLists.txt  allocator.cc  allocator_async.cc  allocator_async_test.cc  allocator_test.cc  chunk.cc  chunk_test.cc  from_span.cc  from_span_test.cc  header_chunk_region_tracker_test.cc  multibuf.cc  multibuf_test.cc  simple_allocator.cc  simple_allocator_test.cc  single_chunk_region_tracker_test.cc  stream.cc  stream_test.cc
pw_multibuf/v1_adapter/: BUILD.bazel  BUILD.gn  CMakeLists.txt  chunk.cc  chunk_allocator.cc  from_span.cc  from_span_test.cc  multibuf.cc  multibuf_v1_test.cc  multibuf_v2_test.cc  simple_allocator.cc  simple_allocator_test.cc  single_chunk_region_tracker_test.cc
pw_multibuf/v2/: BUILD.bazel  BUILD.gn  CMakeLists.txt  byte_iterator_test.cc  chunk_iterator_test.cc  generic_multibuf.cc  multibuf_nc_test.cc  multibuf_test.cc
pw_software_update/: BUILD.bazel  bundled_update_service.cc  bundled_update_service_pwpb.cc  design.rst  manifest_accessor.cc  update_bundle_accessor.cc  update_bundle_test.cc
pw_software_update/py/: BUILD.bazel
pw_spi_zephyr/: BUILD.bazel
pw_sync_zephyr/: BUILD.bazel  CMakeLists.txt  docs.rst
pw_sys_io_zephyr/: BUILD.bazel  CMakeLists.txt  sys_io.cc
pw_thread_zephyr/: BUILD.bazel  CMakeLists.txt  Kconfig  thread.cc
pw_time/: BUILD.bazel  BUILD.gn  docs.rst
pw_time/rust/: BUILD.bazel  pw_time.rs  pw_time_backend_freertos.rs  pw_time_backend_freertos_helper.cc  pw_time_backend_pigweed.rs  pw_time_backend_std.rs  pw_time_backend_zephyr.rs  pw_time_backend_zephyr_helper.cc  pw_time_core.rs
pw_toolchain/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  bazel.rst  default_test_toolchain.bzl  docs.rst
(+2045 files in other folders)
